changed HTML output, added info to the README

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,6 +1,6 @@
 /* 
     Document   : style
-    Created on : 15.11.2011, 13:34:05
+    Created on : 2011-11-15
     Author     : Daniel Kurashige-Gollub
     Description:
         basic style for this application
