--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,3 +1,18 @@
+/**
+ * Copyright (C) 2011 Daniel Kurashige-Gollub, daniel@kurashige-gollub.de
+ * Please see the README file for details.
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+ * in compliance with the License. You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under the License
+ * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing permissions and limitations under
+ * the License.
+ */
+
 /* 
     Document   : style
     Created on : 2011-11-15
@@ -72,4 +87,18 @@
     font-size: smaller;
     font-family: Gill, Helvetica, sans-serif;
     background-color: skyblue;
+}
+
+.footer {
+    font-size: x-small;
+    border-color: green;
+    border-style: solid;
+    border-width: medium;
+    background-color: lightgreen;
+    color: purple;
+}
+
+.smallinfo {
+    font-size: x-small;
+    color: lightgrey;
 }
